# EpitechStuff

./: .travis.yml  LICENSE  README.md
GetNextLine/: get_next_line.c  get_next_line.h  gnl  tt
GetNextLine/v1/: get_next_line.c  get_next_line.h  main.c  test  tt
PSNAVY/: Makefile  navy  testcom
PSNAVY/bonus/V1.3/: Makefile  navy
PSNAVY/bonus/bitcom/: test.h.bak
PSNAVY/bonus/ncurses/: Makefile  main.c  main.c~
PSNAVY/bonus/ressources/: crashtest
PSNAVY/bonus/v1.2/: navy
PSNAVY/include/: base.h  get_next_line.h  map.h  navy.h  printf.h
PSNAVY/srcs/: main.c  main253.c  maintest.c
PSNAVY/srcs/check_map/: char.c  init.c  (+4 more)
Stress_Test/: mysh  result.tcsh  test.sh
WIP/playingwith_fd/: Makefile  playwith_fd
WIP/strtowordtab/: base.c  main.c  strtowordtab.c  tt
bak/: CNAME  README.md
binforSHell/edit/: core.c  edit  edit.h  main.c  test
binforSHell/pcat/: cat.c  cat.h  core.c  pcat
binforSHell/pcd/: core.c  pcd  pcd.c  pcd.h
console_navy/include/: navy.h  usage.h
libfunk/: Makefile
libfunk/include/: base.h  libfunk.h  p_printf.h
libfunk/srcs/: base.c  error.c  flag_match.c  flgs.c  get_next_line.c  l_flgs.c  printf.c  putnbr.c  string.c  strtowordtab.c
minishell1/: Makefile  mysh
minishell1/Stress_Test/: result.mysh  test.sh
minishell1/bonus/: mysh
minishell1/bonus/old/v1.2_beta2/: Makefile.am  Makefile.in  configure  configure.ac
minishell1/bonus/old/v1.2_beta2/autom4te.cache/: output.0  traces.0
minishell1/bonus/old/v1.2_beta2/srcs/: base.c  built_in.c  built_inmatch.c  env.c  env_inlist.c  string.c  strtowordtab.c
minishell1/bonus/old/v1.2_beta2/srcs/.deps/: built_in.Po  check_dir.Po  get_next_line.Po  main.Po  minishell1.Po
minishell1/bonus/old/v1.2_beta2/srcs/built_in/: built_in.c
minishell1/include/: get_next_line.h  msg.h  pshell.h
minishell1/srcs/: built_in.c  main.c  msg.c  pshellv2.c  shortcuts.c
network_lib_test/: main.c  net  net.h
shellv1/: Makefile  PShell
shellv1/include/: book.h  msg.h  struct.h
shellv1/srcs/: argstotab.c  core.c  core2.c  init.c  loop.c  main.c  msg.c  openandsuch.c  test.c
shellv1/test/: main.c  tt
shellv2/: Makefile  PShell
shellv2/include/: msg.h  pshell.h  strtowordtab.h
shellv2/srcs/: base.c  main.c  msg.c  pshellv2.c  shortcuts.c  strtowordtab.c
snippets/bitwise/: get_next_line.c  sigauxbitwised.c  test.c  test.h  tt
snippets/gnl/: main.c
snippets/lowercase/: main.c  my.h  test.txt  tt
snippets/navy/: CMakeLists.txt  Makefile  ctrl  map  serv
snippets/navy/include/: base.h  cli.h  navy.h  serv.h
snippets/navy/parsing/: check.c
snippets/navy/srcs/: cli.c  ctrl.c  serv.c
snippets/navy/srcs/core/: base.c
snippets/navy/test/: main.c  tt
snippets/other/: test.c
snippets/setenv/: setenv.h
snippets/strcat/: main.c  main.c~  tt
snippets/strcmp/: main.c  tt
snippets/v1.3_stable/: CMakeLists.txt  Makefile  config.status  configure.ac  mysh
snippets/v1.3_stable/autom4te.cache/: output.1  requests  traces.0  traces.1
snippets/v1.3_stable/mysh-0.01/: Makefile.am  Makefile.in  configure
snippets/v1.3_stable/mysh-0.01/_build/sub/: Makefile  config.status
snippets/v1.3_stable/mysh-0.01/_build/sub/srcs/.deps/: base2.Po  builtin.Po  check_status.Po  main.Po
snippets/v1.3_stable/mysh-0.01/srcs/: base2.c  builtin.c  check_status.c  main.c
(+147 files in other folders)
