##
## Makefile for Minishell1.2 in /home/bender/Repo/PSU_2016_minishell1/v1.2/
##
## Made by John Doe
## Login   <login_x@epitech.eu>
##
## Started on  Tue Jan 17 11:42:37 2017 John Doe
## Last update Thu Jan 26 16:18:27 2017 John Doe
##

AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = mysh
mysh_SOURCES = srcs/base.c \
srcs/built_in.c \
srcs/built_inmatch.c \
srcs/check_dir.c \
srcs/env.c \
srcs/env_inlist.c \
srcs/error.c \
srcs/get_next_line.c \
srcs/minishell1.c \
srcs/string.c \
srcs/strtowordtab.c \
srcs/main.c
